wx-base/include/generated.h

// CLASS: wxAppTraits
void wxAppTraits_delete(wxAppTraits *self);
wxConfigBase * wxAppTraits_CreateConfig(wxAppTraits * self);
wxEventLoopBase * wxAppTraits_CreateEventLoop(wxAppTraits * self);
wxFontMapper * wxAppTraits_CreateFontMapper(wxAppTraits * self);
wxLog * wxAppTraits_CreateLogTarget(wxAppTraits * self);
wxMessageOutput * wxAppTraits_CreateMessageOutput(wxAppTraits * self);
wxRendererNative * wxAppTraits_CreateRenderer(wxAppTraits * self);
wxString *wxAppTraits_GetDesktopEnvironment(const wxAppTraits * self);
wxStandardPaths * wxAppTraits_GetStandardPaths(wxAppTraits * self);
bool wxAppTraits_HasStderr(wxAppTraits * self);
bool wxAppTraits_IsUsingUniversalWidgets(const wxAppTraits * self);
bool wxAppTraits_ShowAssertDialog(wxAppTraits * self, const wxString * msg);
bool wxAppTraits_SafeMessageBox(wxAppTraits * self, const wxString * text, const wxString * title);
wxString *wxAppTraits_GetAssertStackTrace(wxAppTraits * self);
// CLASS: wxArchiveEntry
wxClassInfo *wxArchiveEntry_CLASSINFO();
wxArchiveEntry * wxArchiveEntry_Clone(const wxArchiveEntry * self);
wxDateTime *wxArchiveEntry_GetDateTime(const wxArchiveEntry * self);
void wxArchiveEntry_SetDateTime(wxArchiveEntry * self, const wxDateTime * dt);
wxString *wxArchiveEntry_GetInternalName(const wxArchiveEntry * self);
bool wxArchiveEntry_IsDir(const wxArchiveEntry * self);
void wxArchiveEntry_SetIsDir(wxArchiveEntry * self, bool is_dir);
bool wxArchiveEntry_IsReadOnly(const wxArchiveEntry * self);
void wxArchiveEntry_SetIsReadOnly(wxArchiveEntry * self, bool is_read_only);
void wxArchiveEntry_SetNotifier(wxArchiveEntry * self, wxArchiveNotifier * notifier);
void wxArchiveEntry_UnsetNotifier(wxArchiveEntry * self);
// CLASS: wxArchiveNotifier
void wxArchiveNotifier_delete(wxArchiveNotifier *self);
void wxArchiveNotifier_OnEntryUpdated(wxArchiveNotifier * self, wxArchiveEntry * entry);
// CLASS: wxClassInfo
void wxClassInfo_delete(wxClassInfo *self);
wxObject * wxClassInfo_CreateObject(const wxClassInfo * self);
const wxChar * wxClassInfo_GetBaseClassName1(const wxClassInfo * self);
const wxChar * wxClassInfo_GetBaseClassName2(const wxClassInfo * self);
const wxChar * wxClassInfo_GetClassName(const wxClassInfo * self);
int wxClassInfo_GetSize(const wxClassInfo * self);
bool wxClassInfo_IsDynamic(const wxClassInfo * self);
bool wxClassInfo_IsKindOf(const wxClassInfo * self, const wxClassInfo * info);
wxClassInfo * wxClassInfo_FindClass(const wxString * class_name);
// CLASS: wxClient
wxClassInfo *wxClient_CLASSINFO();
wxClient *wxClient_new();
wxConnectionBase * wxClient_MakeConnection(wxClient * self, const wxString * host, const wxString * service, const wxString * topic);
wxConnectionBase * wxClient_OnMakeConnection(wxClient * self);
bool wxClient_ValidHost(wxClient * self, const wxString * host);
// CLASS: wxClientData
void wxClientData_delete(wxClientData *self);
wxClientData *wxClientData_new();
// CLASS: wxClientDataContainer
void wxClientDataContainer_delete(wxClientDataContainer *self);
wxClientDataContainer *wxClientDataContainer_new();
void * wxClientDataContainer_GetClientData(const wxClientDataContainer * self);
wxClientData * wxClientDataContainer_GetClientObject(const wxClientDataContainer * self);
void wxClientDataContainer_SetClientData(wxClientDataContainer * self, void * data);
void wxClientDataContainer_SetClientObject(wxClientDataContainer * self, wxClientData * data);
// CLASS: wxCmdLineParser
void wxCmdLineParser_delete(wxCmdLineParser *self);
wxCmdLineParser *wxCmdLineParser_new();
wxCmdLineParser *wxCmdLineParser_new1(int argc, char ** argv);
wxCmdLineParser *wxCmdLineParser_new2(int argc, wchar_t ** argv);
wxCmdLineParser *wxCmdLineParser_new3(const wxString * cmdline);
wxCmdLineParser *wxCmdLineParser_new4(const wxCmdLineEntryDesc * desc);
wxCmdLineParser *wxCmdLineParser_new5(const wxCmdLineEntryDesc * desc, int argc, char ** argv);
wxCmdLineParser *wxCmdLineParser_new6(const wxCmdLineEntryDesc * desc, const wxString * cmdline);
void wxCmdLineParser_AddLongSwitch(wxCmdLineParser * self, const wxString * lng, const wxString * desc, int flags);
void wxCmdLineParser_AddSwitch(wxCmdLineParser * self, const wxString * name, const wxString * lng, const wxString * desc, int flags);
void wxCmdLineParser_AddUsageText(wxCmdLineParser * self, const wxString * text);
bool wxCmdLineParser_AreLongOptionsEnabled(const wxCmdLineParser * self);
void wxCmdLineParser_DisableLongOptions(wxCmdLineParser * self);
void wxCmdLineParser_EnableLongOptions(wxCmdLineParser * self, bool enable);
bool wxCmdLineParser_Found(const wxCmdLineParser * self, const wxString * name);
bool wxCmdLineParser_Found1(const wxCmdLineParser * self, const wxString * name, wxString * value);
bool wxCmdLineParser_Found2(const wxCmdLineParser * self, const wxString * name, long * value);
bool wxCmdLineParser_Found3(const wxCmdLineParser * self, const wxString * name, double * value);
bool wxCmdLineParser_Found4(const wxCmdLineParser * self, const wxString * name, wxDateTime * value);
wxString *wxCmdLineParser_GetParam(const wxCmdLineParser * self, size_t n);
size_t wxCmdLineParser_GetParamCount(const wxCmdLineParser * self);
wxCmdLineArgs *wxCmdLineParser_GetArguments(const wxCmdLineParser * self);
int wxCmdLineParser_Parse(wxCmdLineParser * self, bool give_usage);
void wxCmdLineParser_SetCmdLine(wxCmdLineParser * self, int argc, char ** argv);
void wxCmdLineParser_SetCmdLine1(wxCmdLineParser * self, int argc, wchar_t ** argv);
void wxCmdLineParser_SetCmdLine2(wxCmdLineParser * self, const wxString * cmdline);
void wxCmdLineParser_SetDesc(wxCmdLineParser * self, const wxCmdLineEntryDesc * desc);
void wxCmdLineParser_SetLogo(wxCmdLineParser * self, const wxString * logo);
void wxCmdLineParser_SetSwitchChars(wxCmdLineParser * self, const wxString * switch_chars);
void wxCmdLineParser_Usage(const wxCmdLineParser * self);
wxString *wxCmdLineParser_GetUsageString(const wxCmdLineParser * self);
// CLASS: wxCondition
void wxCondition_delete(wxCondition *self);
wxCondition *wxCondition_new(wxMutex * mutex);
bool wxCondition_IsOk(const wxCondition * self);
// CLASS: wxConfigPathChanger
void wxConfigPathChanger_delete(wxConfigPathChanger *self);
wxConfigPathChanger *wxConfigPathChanger_new(const wxConfigBase * p_container, const wxString * str_entry);
wxString *wxConfigPathChanger_Name(const wxConfigPathChanger * self);
void wxConfigPathChanger_UpdateIfDeleted(wxConfigPathChanger * self);