wx-base/src/generated/ffi.rs

use std::os::raw::{c_double, c_int, c_long, c_uchar, c_uint, c_void};

pub use crate::ffi::*;

extern "C" {

    // wxAppTraits
    pub fn wxAppTraits_delete(self_: *mut c_void);
    pub fn wxAppTraits_CreateConfig(self_: *mut c_void) -> *mut c_void;
    pub fn wxAppTraits_CreateEventLoop(self_: *mut c_void) -> *mut c_void;
    pub fn wxAppTraits_CreateFontMapper(self_: *mut c_void) -> *mut c_void;
    pub fn wxAppTraits_CreateLogTarget(self_: *mut c_void) -> *mut c_void;
    pub fn wxAppTraits_CreateMessageOutput(self_: *mut c_void) -> *mut c_void;
    pub fn wxAppTraits_CreateRenderer(self_: *mut c_void) -> *mut c_void;
    pub fn wxAppTraits_GetDesktopEnvironment(self_: *const c_void) -> *mut c_void;
    pub fn wxAppTraits_GetStandardPaths(self_: *mut c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxAppTraits_GetToolkitVersion(self_: *const c_void, major: *mut c_void, minor: *mut c_void, micro: *mut c_void) -> wxPortId;
    pub fn wxAppTraits_HasStderr(self_: *mut c_void) -> bool;
    pub fn wxAppTraits_IsUsingUniversalWidgets(self_: *const c_void) -> bool;
    pub fn wxAppTraits_ShowAssertDialog(self_: *mut c_void, msg: *const c_void) -> bool;
    pub fn wxAppTraits_SafeMessageBox(
        self_: *mut c_void,
        text: *const c_void,
        title: *const c_void,
    ) -> bool;
    pub fn wxAppTraits_GetAssertStackTrace(self_: *mut c_void) -> *mut c_void;

    // wxArchiveEntry
    pub fn wxArchiveEntry_CLASSINFO() -> *mut c_void;
    pub fn wxArchiveEntry_Clone(self_: *const c_void) -> *mut c_void;
    pub fn wxArchiveEntry_GetDateTime(self_: *const c_void) -> *mut c_void;
    pub fn wxArchiveEntry_SetDateTime(self_: *mut c_void, dt: *const c_void);
    // NOT_SUPPORTED: pub fn wxArchiveEntry_GetName(self_: *const c_void, format: wxPathFormat) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxArchiveEntry_SetName(self_: *mut c_void, name: *const c_void, format: wxPathFormat);
    // NOT_SUPPORTED: pub fn wxArchiveEntry_GetSize(self_: *const c_void) -> wxFileOffset;
    // NOT_SUPPORTED: pub fn wxArchiveEntry_SetSize(self_: *mut c_void, size: wxFileOffset);
    // NOT_SUPPORTED: pub fn wxArchiveEntry_GetInternalFormat(self_: *const c_void) -> wxPathFormat;
    pub fn wxArchiveEntry_GetInternalName(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxArchiveEntry_GetOffset(self_: *const c_void) -> wxFileOffset;
    pub fn wxArchiveEntry_IsDir(self_: *const c_void) -> bool;
    pub fn wxArchiveEntry_SetIsDir(self_: *mut c_void, is_dir: bool);
    pub fn wxArchiveEntry_IsReadOnly(self_: *const c_void) -> bool;
    pub fn wxArchiveEntry_SetIsReadOnly(self_: *mut c_void, is_read_only: bool);
    pub fn wxArchiveEntry_SetNotifier(self_: *mut c_void, notifier: *mut c_void);
    pub fn wxArchiveEntry_UnsetNotifier(self_: *mut c_void);

    // wxArchiveNotifier
    pub fn wxArchiveNotifier_delete(self_: *mut c_void);
    pub fn wxArchiveNotifier_OnEntryUpdated(self_: *mut c_void, entry: *mut c_void);

    // wxClassInfo
    pub fn wxClassInfo_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxClassInfo_new(class_name: *const c_void, base_class1: *const c_void, base_class2: *const c_void, size: c_int, fn: wxObjectConstructorFn) -> *mut c_void;
    pub fn wxClassInfo_CreateObject(self_: *const c_void) -> *mut c_void;
    pub fn wxClassInfo_GetBaseClassName1(self_: *const c_void) -> *const c_void;
    pub fn wxClassInfo_GetBaseClassName2(self_: *const c_void) -> *const c_void;
    pub fn wxClassInfo_GetClassName(self_: *const c_void) -> *const c_void;
    pub fn wxClassInfo_GetSize(self_: *const c_void) -> c_int;
    pub fn wxClassInfo_IsDynamic(self_: *const c_void) -> bool;
    pub fn wxClassInfo_IsKindOf(self_: *const c_void, info: *const c_void) -> bool;
    pub fn wxClassInfo_FindClass(class_name: *const c_void) -> *mut c_void;

    // wxClient
    pub fn wxClient_CLASSINFO() -> *mut c_void;
    pub fn wxClient_new() -> *mut c_void;
    pub fn wxClient_MakeConnection(
        self_: *mut c_void,
        host: *const c_void,
        service: *const c_void,
        topic: *const c_void,
    ) -> *mut c_void;
    pub fn wxClient_OnMakeConnection(self_: *mut c_void) -> *mut c_void;
    pub fn wxClient_ValidHost(self_: *mut c_void, host: *const c_void) -> bool;

    // wxClientData
    pub fn wxClientData_delete(self_: *mut c_void);
    pub fn wxClientData_new() -> *mut c_void;
    // DTOR: pub fn wxClientData_~wxClientData(self_: *mut c_void);

    // wxClientDataContainer
    pub fn wxClientDataContainer_delete(self_: *mut c_void);
    pub fn wxClientDataContainer_new() -> *mut c_void;
    // DTOR: pub fn wxClientDataContainer_~wxClientDataContainer(self_: *mut c_void);
    pub fn wxClientDataContainer_GetClientData(self_: *const c_void) -> *mut c_void;
    pub fn wxClientDataContainer_GetClientObject(self_: *const c_void) -> *mut c_void;
    pub fn wxClientDataContainer_SetClientData(self_: *mut c_void, data: *mut c_void);
    pub fn wxClientDataContainer_SetClientObject(self_: *mut c_void, data: *mut c_void);

    // wxCmdLineParser
    pub fn wxCmdLineParser_delete(self_: *mut c_void);
    pub fn wxCmdLineParser_new() -> *mut c_void;
    pub fn wxCmdLineParser_new1(argc: c_int, argv: *mut c_void) -> *mut c_void;
    pub fn wxCmdLineParser_new2(argc: c_int, argv: *mut c_void) -> *mut c_void;
    pub fn wxCmdLineParser_new3(cmdline: *const c_void) -> *mut c_void;
    pub fn wxCmdLineParser_new4(desc: *const c_void) -> *mut c_void;
    pub fn wxCmdLineParser_new5(desc: *const c_void, argc: c_int, argv: *mut c_void)
        -> *mut c_void;
    pub fn wxCmdLineParser_new6(desc: *const c_void, cmdline: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxCmdLineParser_~wxCmdLineParser(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxCmdLineParser_AddLongOption(self_: *mut c_void, lng: *const c_void, desc: *const c_void, type_: wxCmdLineParamType, flags: c_int);
    pub fn wxCmdLineParser_AddLongSwitch(
        self_: *mut c_void,
        lng: *const c_void,
        desc: *const c_void,
        flags: c_int,
    );
    // NOT_SUPPORTED: pub fn wxCmdLineParser_AddOption(self_: *mut c_void, name: *const c_void, lng: *const c_void, desc: *const c_void, type_: wxCmdLineParamType, flags: c_int);
    // NOT_SUPPORTED: pub fn wxCmdLineParser_AddParam(self_: *mut c_void, desc: *const c_void, type_: wxCmdLineParamType, flags: c_int);
    pub fn wxCmdLineParser_AddSwitch(
        self_: *mut c_void,
        name: *const c_void,
        lng: *const c_void,
        desc: *const c_void,
        flags: c_int,
    );
    pub fn wxCmdLineParser_AddUsageText(self_: *mut c_void, text: *const c_void);
    pub fn wxCmdLineParser_AreLongOptionsEnabled(self_: *const c_void) -> bool;
    pub fn wxCmdLineParser_DisableLongOptions(self_: *mut c_void);
    pub fn wxCmdLineParser_EnableLongOptions(self_: *mut c_void, enable: bool);
    pub fn wxCmdLineParser_Found(self_: *const c_void, name: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxCmdLineParser_FoundSwitch(self_: *const c_void, name: *const c_void) -> wxCmdLineSwitchState;
    pub fn wxCmdLineParser_Found1(
        self_: *const c_void,
        name: *const c_void,
        value: *mut c_void,
    ) -> bool;
    pub fn wxCmdLineParser_Found2(
        self_: *const c_void,
        name: *const c_void,
        value: *mut c_void,
    ) -> bool;
    pub fn wxCmdLineParser_Found3(
        self_: *const c_void,
        name: *const c_void,
        value: *mut c_void,
    ) -> bool;
    pub fn wxCmdLineParser_Found4(
        self_: *const c_void,
        name: *const c_void,
        value: *mut c_void,
    ) -> bool;
    pub fn wxCmdLineParser_GetParam(self_: *const c_void, n: usize) -> *mut c_void;
    pub fn wxCmdLineParser_GetParamCount(self_: *const c_void) -> usize;
    pub fn wxCmdLineParser_GetArguments(self_: *const c_void) -> *mut c_void;
    pub fn wxCmdLineParser_Parse(self_: *mut c_void, give_usage: bool) -> c_int;
    pub fn wxCmdLineParser_SetCmdLine(self_: *mut c_void, argc: c_int, argv: *mut c_void);
    pub fn wxCmdLineParser_SetCmdLine1(self_: *mut c_void, argc: c_int, argv: *mut c_void);
    pub fn wxCmdLineParser_SetCmdLine2(self_: *mut c_void, cmdline: *const c_void);
    pub fn wxCmdLineParser_SetDesc(self_: *mut c_void, desc: *const c_void);
    pub fn wxCmdLineParser_SetLogo(self_: *mut c_void, logo: *const c_void);
    pub fn wxCmdLineParser_SetSwitchChars(self_: *mut c_void, switch_chars: *const c_void);
    pub fn wxCmdLineParser_Usage(self_: *const c_void);
    pub fn wxCmdLineParser_GetUsageString(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCmdLineParser_ConvertStringToArgs(cmdline: *const c_void, flags: wxCmdLineSplitType) -> *mut c_void;

    // wxCondition
    pub fn wxCondition_delete(self_: *mut c_void);
    pub fn wxCondition_new(mutex: *mut c_void) -> *mut c_void;
    // DTOR: pub fn wxCondition_~wxCondition(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxCondition_Broadcast(self_: *mut c_void) -> wxCondError;
    pub fn wxCondition_IsOk(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxCondition_Signal(self_: *mut c_void) -> wxCondError;
    // NOT_SUPPORTED: pub fn wxCondition_Wait(self_: *mut c_void) -> wxCondError;
    // NOT_SUPPORTED: pub fn wxCondition_Wait1(self_: *mut c_void, predicate: *const c_void) -> wxCondError;
    // NOT_SUPPORTED: pub fn wxCondition_WaitTimeout(self_: *mut c_void, milliseconds: unsigned long) -> wxCondError;

    // wxConfigPathChanger
    pub fn wxConfigPathChanger_delete(self_: *mut c_void);
    pub fn wxConfigPathChanger_new(
        p_container: *const c_void,
        str_entry: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxConfigPathChanger_~wxConfigPathChanger(self_: *mut c_void);
    pub fn wxConfigPathChanger_Name(self_: *const c_void) -> *mut c_void;
    pub fn wxConfigPathChanger_UpdateIfDeleted(self_: *mut c_void);
